--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "angular-gridster2": "^10.1.3",
+    "dotenv": "^8.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
     "socket.io": "^2.3.0",
     "systeminformation": "^4.26.10",
-    "tail": "^2.0.4"
+    "tail": "^2.0.4",
+    "zabbix-promise": "^2.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
